RunwayCI: Decreased xmx memory setting because it was causing the OS to terminate the process.